- 0.1.2
	* verify pgp signature from reader instead of copying to memory
	* announce capabilities in headers
- 0.1.1
	* Replace pgp package with sequoia-openpgp
- 0.1.0
	* immutable PUT
	* mutable reference PUT
	* custom PUBSIG http scheme with pgp authentication
	* filesystem based store with symlinks
	* reverse lookup tracing of mutable reference auth fingerprint