@@ -1,6 +1,7 @@
 - 0.1.2
 	* verify pgp signature from reader instead of copying to memory
-	* announce capabilities in headers
+	* announce capabilities in response headers
+	* only trace if requested in request headers
 - 0.1.1
 	* Replace pgp package with sequoia-openpgp
 - 0.1.0
